# audio-slicer-cpp

./: .gitignore  CMakeLists.txt  Config.cmake  README.md  main.cpp  main_gui.cpp  slicer.cpp  slicer.h
gui/: mainwindow.cpp  mainwindow.h  ui_mainwindow.h  workthread.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_config.h.in
src/app/macos/: Info.plist.in  appicon.icns
src/cli/: CMakeLists.txt
src/gui/: CMakeLists.txt  workthread.cpp
src/gui/qt/: CMakeLists.txt  main_qt.cpp  mainwindow.cpp  mainwindow.h  ui_mainwindow.h  ui_mainwindow.ui  workthread.cpp
src/slicer/: CMakeLists.txt  slicer.cpp  slicer.h
